# series

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  series.cabal
bench/: Main.hs  Naive.hs
src/Data/: Series.hs
src/Data/Series/: Continuous.hs  Internal.hs  TimeRange.hs
test/: BinarySearch.hs  Main.hs  Merge.hs  Nub.hs  PairWiseZipWith.hs  PointwiseZipWith.hs  Resample.hs  Series.hs  Utils.hs
