cabal-version:   3.4
name:            series
version:         0.1.0.0
license:
author:          Emily Martins
maintainer:      emi@haskell.fyi
build-type:      Simple
extra-doc-files: CHANGELOG.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -eventlog

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    NoFieldSelectors
    OverloadedRecordDot

  default-language:   Haskell2010
  mixins:

  build-depends:
    , base                   >=4.13.0.0 && <4.18.0.0.0
    , vector
    , these
    , time

library
  import:          shared
  exposed-modules:
    Data.Series
    Data.Series.Continuous

  other-modules:
    Data.Series.Internal

  hs-source-dirs:  src
  build-depends:
