cabal-version:   3.4
name:            series
version:         0.1.0.0
license:
author:          Emily Martins
maintainer:      emi@haskell.fyi
build-type:      Simple
extra-doc-files: CHANGELOG.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -eventlog

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    NoFieldSelectors
    OverloadedRecordDot

  default-language:   Haskell2010
  mixins:
  build-depends:
    , base    >=4.13.0.0 && <4.18.0.0.0
    , these
    , time
    , vector

library
  import:          shared
  exposed-modules:
    Data.Series
    Data.Series.Continuous
    Data.Series.TimeRange

  other-modules:   Data.Series.Internal
  hs-source-dirs:  src
  build-depends:

common test-deps
  build-depends:
    , QuickCheck
    , quickcheck-instances
    , series
    , tasty
    , tasty-hunit
    , tasty-quickcheck

common test-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2

test-suite series-test
  import:         shared, test-deps, test-opts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    BinarySearch
    Data.Series
    Data.Series.Internal
    Data.Series.TimeRange
    Merge
    PointwiseZipWith
    Resample
    Series
    Utils

  hs-source-dirs: src test
